--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-.result{
+.result {
   display: none;
 }
 
@@ -6,16 +6,32 @@ ul {
   list-style-type: none;
 }
 
-body{
+body {
   text-align: center;
   margin: 10px;
+  background: #aec33a;
+  color: #253f58;
 }
 
-img{
+img {
   width: 50px;
+  font-weight: bold;
 }
 
-em{
-  color: red;
+h1 {
+  color: #d92139;
+}
+em {
+  color: #d92139;
   font-size: 20px;
+  font-weight: bolder;
+}
+
+/* .form-control{
+  width: 50%;
+  align-self: center;
+} */
+
+form {
+  margin: 20px;
 }
